// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/file_preview_modal/file_preview_modal_header/FilePreviewModalHeader should match snapshot the desktop view 1`] = `
<div>
  <div
    class="file-preview-modal-header"
  >
    <div
      class="file-preview-modal__info"
    >
      <div
        class="file-preview-modal__info-details"
      >
        <h5
          class="file-preview-modal__file-name"
        >
          img.png
        </h5>
        <span
          class="file-preview-modal__file-details"
        >
          <span
            class="file-preview-modal__file-details-user-name"
          >
            Someone
          </span>
          <span
            class="file-preview-modal__channel"
          />
        </span>
      </div>
    </div>
    <div
      class="file_preview_modal_main_nav"
    >
      <button
        aria-label="Previous file"
        class="file_preview_modal_main_nav__prev"
        id="previewArrowLeft"
      >
        <i
          class="icon icon-chevron-left"
        />
      </button>
      <span
        aria-atomic="true"
        aria-live="polite"
        class="modal-bar-file-count"
      >
        2 of 3
      </span>
      <button
        aria-label="Next file"
        class="file_preview_modal_main_nav__next"
        id="previewArrowRight"
      >
        <i
          class="icon icon-chevron-right"
        />
      </button>
    </div>
    <div
      class="file-preview-modal-main-actions__actions"
    >
      <span
        aria-label="Copy code"
        class="post-code__clipboard file-preview-modal-main-actions__action-item"
        role="button"
      >
        <i
          class="icon icon-content-copy"
        />
      </span>
      <a
        aria-label="Download"
        class="file-preview-modal-main-actions__action-item"
        download="img.png"
        href="http://example.com/img.png"
        location="file_preview_modal_main_actions"
        rel="noopener noreferrer"
        target="_blank"
      >
        <i
          class="icon icon-download-outline"
        />
      </a>
      <button
        aria-label="Close"
        class="file-preview-modal-main-actions__action-item"
      >
        <i
          class="icon icon-close"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`components/file_preview_modal/file_preview_modal_header/FilePreviewModalHeader should match snapshot the mobile view 1`] = `
<div>
  <div
    class="file-preview-modal-header"
  >
    <div
      class="file-preview-modal-main-actions__actions"
    >
      <button
        aria-label="Close"
        class="file-preview-modal-main-actions__action-item"
      >
        <i
          class="icon icon-close"
        />
      </button>
    </div>
    <div
      class="file_preview_modal_main_nav"
    >
      <button
        aria-label="Previous file"
        class="file_preview_modal_main_nav__prev"
        id="previewArrowLeft"
      >
        <i
          class="icon icon-chevron-left"
        />
      </button>
      <span
        aria-atomic="true"
        aria-live="polite"
        class="modal-bar-file-count"
      >
        2 of 3
      </span>
      <button
        aria-label="Next file"
        class="file_preview_modal_main_nav__next"
        id="previewArrowRight"
      >
        <i
          class="icon icon-chevron-right"
        />
      </button>
    </div>
  </div>
</div>
`;
